config/prow/cluster/tekton/4-prow-pipeline.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prow-pipeline
  namespace: prow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prow-pipeline
  template:
    metadata:
      labels:
        app: prow-pipeline
    spec:
      serviceAccount: prow-pipeline
      containers:
      - name: pipeline
        image: gcr.io/k8s-prow/pipeline:v20220222-8d1661c08e
        imagePullPolicy: Always
        args:
        - --config=/etc/config/config.yaml
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
      volumes:
      - name: config
        configMap:
          # This should be the name of the config map for your prow instance
          name: config
